--- a/AshesiLibraryESP32/HTML/Librarian.html
+++ b/AshesiLibraryESP32/HTML/Librarian.html
@@ -1371,8 +1371,7 @@
               approval: newApproval.toLowerCase() === "true",
             });
 
-            CheckoutDisplayBooks();
-            CheckoutDisplayCard();
+            // Assuming displayBooks is a function to update the UI, you may call it here
           } else {
             alert("Please enter a valid student ID and duration");
           }
@@ -1522,8 +1521,7 @@
               approval: newApproval.toLowerCase() === "true",
             });
 
-            CheckoutDisplayBooks();
-            CheckoutDisplayCard();
+            // Assuming CheckoutDisplayBooks is a function to update the UI, you may call it here
           } else {
             alert("Please enter a valid student ID and duration");
           }
